<resources>
    <string name="app_name" translatable="false">AtoCash</string>
    <string name="app_local_db" translatable="false">atocash-local-db</string>
    <string name="default_notification_channel_id">Normal Notifications</string>
    <string name="cannot_share_app">Cannot share…</string>
    <string name="loading">Loading…</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_to_atocash">Welcome to AtoCash,</string>
    <string name="login">Login</string>
    <string name="no_notifications_found">No notifications found!</string>
    <string name="title_activity_admin_main" translatable="false">AdminMainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="enter_valid_user_name">Username invalid!</string>
    <string name="enter_valid_password">Enter valid password!</string>
    <string name="title_activity_employee_main" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_email_to_reset_your_password">Enter email to reset your password</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Email</string>
    <string name="menu_cost_center">Cost Center</string>
    <string name="menu_department">Department</string>
    <string name="menu_employee">Employee</string>
    <string name="menu_roles">Job Roles</string>
    <string name="menu_approval_level">Approval Level</string>
    <string name="menu_approval_strategy">Approval Strategy</string>
    <string name="menu_project">Project</string>
    <string name="menu_sub_project">Sub Project</string>
    <string name="menu_task">Task</string>
    <string name="menu_reset_password">Reset Password</string>
    <string name="open_drawer" translatable="false">Open Drawer</string>
    <string name="close_drawer" translatable="false">Close Drawer</string>
    <string name="press_again_exit">Press BACK again to exit!</string>
    <string name="account">Account</string>
    <string name="title_expense">Expense</string>
    <string name="title_advance">Advance</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_report">Report</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_cost_centers">No Cost centers available!</string>
    <string name="no_user_roles_avail">No User Roles available!</string>
    <string name="no_job_roles_avail">No Job Roles available!</string>
    <string name="manage_cost_center">Manage Cost Center</string>
    <string name="hint_code">Code</string>
    <string name="hint_description">Description</string>
    <string name="btn_create">Create</string>
    <string name="btn_back">Back</string>
    <string name="err_enter_cost_center_code">Enter cost center code!</string>
    <string name="err_enter_cost_center_desc">Enter description!</string>
    <string name="wallet_balance">Wallet Balance: </string>
    <string name="pending">Pending</string>
    <string name="advance">Advance</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="submitted">Submitted</string>
    <string name="no_expense_data_available">No expense data available!</string>
    <string name="no_expense_type_available">No expense type available!</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="hint_cost_center">Cost Center</string>
    <string name="job_roles">Job Roles</string>
    <string name="menu_job_roles">Job Roles</string>
    <string name="hint_name">Name</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="to_recover_your_password_you_need_to_enter_your_registered_email_we_will_send_a_link_to_reset_your_password">To recover your password, you need to enter your registered email. We will send a link to reset your password</string>
    <string name="manage_approval">Manage Approval</string>
    <string name="title_level">Level</string>
    <string name="title_groups">Groups</string>
    <string name="title_role_map">Role Map</string>
    <string name="title_status">Status</string>
    <string name="menu_employee_type">Employment Types</string>
    <string name="menu_expense_type">Expense Type</string>
    <string name="menu_users">Users</string>
    <string name="menu_user_roles">User Roles</string>
    <string name="menu_assign_roles">Assign Roles</string>
    <string name="menu_assign_project">Assign Project</string>
    <string name="advance_id">"Advance ID : "</string>
    <string name="title_pending">Pending</string>
    <string name="add_expense">Add expense</string>
    <string name="manage_expense">Manage Expenses</string>
    <string name="manage_advance">Manage Advance</string>
    <string name="hint_advance_amount">Advance Amount</string>
    <string name="enable_project">Enable Project</string>
    <string name="hint_sub_project">Sub Project</string>
    <string name="hint_project">Project</string>
    <string name="hint_task">Task</string>
    <string name="from">From</string>
    <string name="hint_from">From : </string>
    <string name="hint_to">To : </string>
    <string name="hint_purpose">Purpose : </string>
    <string name="hint_amount">Amount : </string>
    <string name="title_travel_request">Travel Request</string>
    <string name="title_travel">Travel</string>
    <string name="title_travel_request_">Travel Request</string>
    <string name="manage_travel_request">Manage Travel Request</string>
    <string name="title_help_support"><![CDATA[Help & Support]]></string>
    <string name="title_logout">Logout</string>
    <string name="btn_assign">Assign</string>
    <string name="hint_employee">Employee</string>
    <string name="hint_user">User</string>
    <string name="hint_role">Role</string>
    <string name="hint_user_role">User Role</string>
    <string name="hint_user_name_">Username</string>
    <string name="hint_project_manager">Project Manager</string>
    <string name="manage_sub_projects">Manage Sub Project</string>
    <string name="manage_projects">Manage Projects</string>
    <string name="no_tasks_available">No tasks added yet!</string>
    <string name="manage_tasks">Manage Tasks</string>
    <string name="manage_user_roles">Manage User Roles</string>
    <string name="manage_users">Manage users</string>
    <string name="manage_employee">Manage Employee</string>
    <string name="manage_employement_type">Manage Employement Type</string>
    <string name="hint_national_id">National ID</string>
    <string name="hint_passport_no">Passport No</string>
    <string name="hint_tax_no">Tax No</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_nationality">Nationality</string>
    <string name="hint_date_joined">Date Joined</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_approval_group">Approval Group</string>
    <string name="hint_employment_type">Employment Type</string>
    <string name="hint_department">Department</string>
    <string name="hint_status">Status</string>
    <string name="no_data_avail">No data available!</string>
    <string name="manage_approval_level">Manage Approval Level</string>
    <string name="manage_approval_group">Manage Approval Group</string>
    <string name="manage_approval_role_map">Manage Role Map</string>
    <string name="manage_approval_status">Manage Status</string>
    <string name="hint_level">Level</string>
    <string name="hint_group">Group</string>
    <string name="no_projects_avail">No Projects available!</string>
    <string name="cost_center_status">Cost Center Status</string>
    <string name="err_department_code">Enter department code!</string>
    <string name="err_enter_department_name">Enter department name!</string>
    <string name="err_choose_cost_center">Choose cost center!</string>
    <string name="check_internet">Check your internet connection!</string>
    <string name="err_enter_name">Enter name</string>
    <string name="err_choose_project">Choose Project</string>
    <string name="err_choose_project_manager">Choose project manager</string>
    <string name="err_choose_status">Choose status</string>
    <string name="btn_update">Update</string>
    <string name="deleting">Deleting…</string>
    <string name="deleting_records">Deleting records…</string>
    <string name="info_cost_center_deleted_fail">Failed to delete cost center!</string>
    <string name="info_cost_center_deleted_success">Cost center deleted successfully!</string>
    <string name="err_cannot_delete_cost_center">Cost center already in use, cannot delete!</string>
    <string name="updating">Updating…</string>
    <string name="creating_cost_center">Creating cost center....</string>
    <string name="updating_cost_center">Updating cost center…</string>
    <string name="no_sub_projects_avail">No SubProjects available!</string>
    <string name="no_department_avail">No departments available!</string>
    <string name="no_emp_types_avail">No Employment types available!</string>
    <string name="no_emp_avail">No Employees available!</string>
    <string name="no_users_avail">No users available!</string>
    <string name="info_department_deleted_success">Department deleted successfully!</string>
    <string name="manage_department">Manage Department</string>
    <string name="updating_job_roles">Updating job roles…</string>
    <string name="creating_job_roles">Creating job roles…</string>
    <string name="info_job_roles_created_success">Job roles created successfully!</string>
    <string name="info_job_roles_updated_success">Job roles updated successfully!</string>
    <string name="hint_max_amt">Max. Amount</string>
    <string name="err_enter_code">Enter code</string>
    <string name="err_enter_amount">Enter max amount</string>
    <string name="err_enter_emp_name">Enter employment name</string>
    <string name="err_enter_emp_desc">Enter employment description</string>
    <string name="updating_employee_type">Updating employment types…</string>
    <string name="creating_employee_type">Creating employment types…</string>
    <string name="info_emp_type_deleted_success">Employment type deleted successfully!</string>
    <string name="menu_currency">Currency</string>
    <string name="title_cash_advance">Cash Advance</string>
    <string name="hint_invoice_no">Invoice no.</string>
    <string name="hint_invoice_date">Invoice Date</string>
    <string name="hint_tax_amount">Tax amount</string>
    <string name="hint_location">Location</string>
    <string name="menu_report">Reports</string>
    <string name="expense_details">Expense Details </string>
    <string name="claim_amt">Claim Amount </string>
    <string name="vendor">Vendor </string>
    <string name="title_documents" translatable="false">Attached Invoices:</string>
</resources>