<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logoutContent"
        style="@style/TextHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/googlesans_regular"
        android:gravity="start"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/expense_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/tab_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/hint_invoice_no" />

        <TextView
            android:id="@+id/invoice_no_tv"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            tools:text="ATRPA-001" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/claim_amt" />

        <TextView
            android:id="@+id/claim_amt_tv"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            tools:text="100" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/hint_invoice_date" />

        <TextView
            android:id="@+id/invoice_date_tv"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            tools:text="28/10/2021" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/hint_location" />

        <TextView
            android:id="@+id/location_tv"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            tools:text="Chennai" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/hint_tax_amount" />

        <TextView
            android:id="@+id/tax_amt_tv"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            tools:text="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/vendor" />

        <TextView
            android:id="@+id/vendor_tv"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            tools:text="ATRPA" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/title_expense" />

        <TextView
            android:id="@+id/expense_tv"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            tools:text="Product" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/tab_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            style="@style/TextContentStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="start"
            android:text="@string/title_documents" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/docs_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            tools:itemCount="2"
            tools:listitem="@layout/item_chosen_document" />

    </LinearLayout>


</LinearLayout>